@@ -1982,7 +1982,7 @@ RCS file: avmedia/source/gstreamer/makefile.mk
 diff -N avmedia/source/gstreamer/makefile.mk
 --- /dev/null	1 Jan 1970 00:00:00 -0000
 +++ avmedia/source/gstreamer/makefile.mk	15 Aug 2006 17:14:21 -0000	1.3
-@@ -0,0 +1,81 @@
+@@ -0,0 +1,85 @@
 +#*************************************************************************
 +#
 +#   OpenOffice.org - a multi-platform office productivity suite
@@ -2026,6 +2026,8 @@ diff -N avmedia/source/gstreamer/makefile.mk
 +
 +.INCLUDE :  	settings.mk
 +
++.IF "$(ENABLE_GSTREAMER)" == "TRUE"
++
 +.IF "$(verbose)"!="" || "$(VERBOSE)"!=""
 +CDEFS+= -DVERBOSE
 +.ENDIF
@@ -2060,6 +2062,8 @@ diff -N avmedia/source/gstreamer/makefile.mk
 +
 +DEF1NAME=$(SHL1TARGET)
 +DEF1EXPORTFILE=exports.dxp
++
++.ENDIF
 +
 +.ENDIF
 +
