@@ -135,9 +135,15 @@ testtool-more-defaults.diff, martink
 #Fix plus/minus in to each heading in Navigator
 plus-minus-sw-navigator.diff, i#64886, n#129410, jianhua
 
+
+[ LinuxOnly ]
+
 # use fontconfig for font fallback
 # upate it for cjk charactor check and using default font in VCL.xcu
 fontconfig-substitute.diff, i#54603, mklose
+
+
+[ TemporaryHacks ]
 
 # add SPARC platform to automation
 automation-sparc-platform.diff, i#66140, rengelha
