@@ -1,3 +1,7 @@
+2006-08-21  Tor Lillqvist  <tml@novell.com>
+
+	* makefile.mk: Bypass unless ENABLE_GSTREAMER.
+
 2006-08-16  Radek Doulik  <rodo@novell.com>
 
 	* gstplayer.cxx (create): set state to PAUSED so that we can query
